force-app/main/default/objects/NotificationTemplate__c/NotificationTemplate__c.object-meta.xml
<CustomObject>
    <description>[i2sema] Notification Message Templates
Channel 별 알림 메세지 템플릿 제공</description>
    <label>Notification Template</label>
    <nameField>
        <label>Notification Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>