force-app/main/default/objects/NotificationTemplate__c/fields/Ars080Phone__c.field-meta.xml
<CustomField>
    <fullName>Ars080Phone__c</fullName>
    <description>ARS 080 Phone</description>
    <label>ARS 080 Phone</label>
    <type>Phone</type>
</CustomField>