force-app/main/default/objects/NotificationTemplate__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>[20.01.06] 템플릿 내용</description>
    <label>Content</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>