force-app/main/default/objects/NotificationTemplate__c/fields/ContentLength__c.field-meta.xml
<CustomField>
    <fullName>ContentLength__c</fullName>
    <description>Content Length Size</description>
    <label>ContentLength</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>