force-app/main/default/objects/NotificationTemplate__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>(x)External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>