force-app/main/default/objects/NotificationTemplate__c/fields/fm_LABELCount__c.field-meta.xml
<CustomField>
    <fullName>fm_LABELCount__c</fullName>
    <description>LABEL 유무 카운트</description>
    <formula>IF(LABEL1__c== false, 0, 1)+
IF(LABEL2__c== false, 0, 1)+
IF(LABEL3__c== false, 0, 1)+
IF(LABEL4__c== false, 0, 1)+
IF(LABEL5__c== false, 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LABEL Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>