force-app/main/default/objects/NotificationTemplate__c/fields/fm_OrganizationId__c.field-meta.xml
<CustomField>
    <fullName>fm_OrganizationId__c</fullName>
    <description>Org Id</description>
    <formula>$Organization.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrganizationId</label>
    <type>Text</type>
</CustomField>