force-app/main/default/objects/NotificationTemplate__c/fields/IF_CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>IF_CompletedDate__c</fullName>
    <description>Interface Completed Date</description>
    <label>IF Completed Date</label>
    <type>DateTime</type>
</CustomField>