force-app/main/default/objects/NotificationTemplate__c/fields/IF_RequestedDate__c.field-meta.xml
<CustomField>
    <fullName>IF_RequestedDate__c</fullName>
    <description>Interface Requested Date</description>
    <label>IF Requested Date</label>
    <type>DateTime</type>
</CustomField>