force-app/main/default/objects/NotificationTemplate__c/fields/IF_Status__c.field-meta.xml
<CustomField>
    <fullName>IF_Status__c</fullName>
    <description>Interface Status</description>
    <label>IF Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IFStatus</valueSetName>
    </valueSet>
</CustomField>