force-app/main/default/objects/NotificationTemplate__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Template 활성화 여부</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>