force-app/main/default/objects/NotificationTemplate__c/fields/KakaoImgLink__c.field-meta.xml
<CustomField>
    <fullName>KakaoImgLink__c</fullName>
    <description>카카오 친구톡 이미지 클릭시 링크</description>
    <label>Kakao Img Link</label>
    <type>Url</type>
</CustomField>