force-app/main/default/objects/NotificationTemplate__c/fields/KakaoNotiTempleteCode__c.field-meta.xml
<CustomField>
    <fullName>KakaoNotiTempleteCode__c</fullName>
    <description>카카오 알림톡 템플릿 코드 - 기 등록된 템플릿 코드 이용(InfoBank에 등록된 코드만 사용가능)</description>
    <label>Kakao Noti Templete Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>