force-app/main/default/objects/NotificationTemplate__c/fields/KDCE_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ExternalId__c</fullName>
    <description>KDCE Notiforce Template External Id for Sending API From 3rd Party System.</description>
    <displayFormat>NT-{YY}{MM}{DD}-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>External Id</label>
    <type>AutoNumber</type>
</CustomField>