force-app/main/default/objects/NotificationTemplate__c/fields/LABEL1__c.field-meta.xml
<CustomField>
    <fullName>LABEL1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LABEL1</label>
    <type>Checkbox</type>
</CustomField>