force-app/main/default/objects/NotificationTemplate__c/fields/LABEL2__c.field-meta.xml
<CustomField>
    <fullName>LABEL2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LABEL2</label>
    <type>Checkbox</type>
</CustomField>