force-app/main/default/objects/NotificationTemplate__c/fields/LABEL3__c.field-meta.xml
<CustomField>
    <fullName>LABEL3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LABEL3</label>
    <type>Checkbox</type>
</CustomField>