force-app/main/default/objects/NotificationTemplate__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Information Opt-in NPS</description>
    <label>NPS</label>
    <type>Checkbox</type>
</CustomField>