force-app/main/default/objects/NotificationTemplate__c/validationRules/Information_Type_is_required_for_NPS.validationRule-meta.xml
<ValidationRule>
    <fullName>Information_Type_is_required_for_NPS</fullName>
    <active>true</active>
    <description>Information Type is required for NPS</description>
    <errorConditionFormula>AND(NPS__c, NOT(ISPICKVAL(Type__c, &apos;2&apos;)))</errorConditionFormula>
    <errorDisplayField>NPS__c</errorDisplayField>
    <errorMessage>Information Type is required for NPS</errorMessage>
</ValidationRule>