force-app/main/default/objects/NotificationTemplate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>KDCE_ExternalId__c</columns>
    <columns>IsActive__c</columns>
    <columns>Channel__c</columns>
    <columns>Title__c</columns>
    <columns>Content__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>KakaoNotiTempleteCode__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>IF_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>