force-app/main/default/objects/NotificationTemplate__c/listViews/kakao_noti_talk.listView-meta.xml
<ListView>
    <fullName>kakao_noti_talk</fullName>
    <columns>NAME</columns>
    <columns>KDCE_ExternalId__c</columns>
    <columns>KakaoNotiTempleteCode__c</columns>
    <columns>IsActive__c</columns>
    <columns>Channel__c</columns>
    <columns>Title__c</columns>
    <columns>Content__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Channel__c</field>
        <operation>equals</operation>
        <value>1008</value>
    </filters>
    <label>카카오 알림톡</label>
</ListView>