force-app/main/default/objects/NotificationTemplate__c/listViews/SMS_LMS_MMS.listView-meta.xml
<ListView>
    <fullName>SMS_LMS_MMS</fullName>
    <columns>NAME</columns>
    <columns>KDCE_ExternalId__c</columns>
    <columns>KakaoNotiTempleteCode__c</columns>
    <columns>IsActive__c</columns>
    <columns>Channel__c</columns>
    <columns>Title__c</columns>
    <columns>Content__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>IF_Status__c</columns>
    <columns>IF_RequestedDate__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Channel__c</field>
        <operation>equals</operation>
        <value>0,2,3</value>
    </filters>
    <label>SMS-LMS-MMS</label>
</ListView>